--- a/test.html
+++ b/test.html
@@ -42,12 +42,12 @@
             <h2>What can you build with Render?</h2>
             <div class="feature-grid">
                 <div class="feature">
-                    <img src="static/icon-1.svg" alt="Icon 1">
+                    <img src="images\depositphotos_52467319-stock-photo-business-people-working-in-office.jpg" alt="Icon 1">
                     <h3>Web Apps</h3>
                     <p>Deploy web apps in seconds with Render's automated pipeline.</p>
                 </div>
                 <div class="feature">
-                    <img src="static/icon-2.svg" alt="Icon 2">
+                    <img src="" alt="Icon 2">
                     <h3>APIs</h3>
                     <p>Build and deploy APIs with ease using Render's API gateway.</p>
                 </div>
@@ -62,7 +62,7 @@
             <h2>What our customers say</h2>
             <div class="testimonial-grid">
                 <div class="testimonial">
-                    <img src="static/avatar-1.jpg" alt="Avatar 1">
+                    <img src="" alt="Avatar 1">
                     <p>"Render has been a game-changer for our development workflow."</p>
                     <span>John Doe, CEO of Example Inc.</span>
                 </div>
