--- a/registerpage1.html
+++ b/registerpage1.html
@@ -7,34 +7,50 @@
     <link rel="stylesheet" href="stylepage.css">
 </head>
 <body>
-    <h1>Build your Resume</h1>
     <div id="basic">
-        <legend>
+        <h1>Build your Resume</h1>
+         <div id="basicinfo">
+         <fieldset>
+         <legend>
             <h2>Basic Information</h2>
-        </legend>
-        <label for="Firstname1">First Name</label>
-        <input type="text" placeholder="First name">
-        <br><br>
-        <label for="lastname1">last Name</label>
-        <input type="text" placeholder="last Name">
-        <br><br>
-        <label for="email1">E-mail</label>
-        <input type="email" placeholder="e-mail address">
-        <br><br>
-        <label for="tel">Phone Number:</label>
-        <input type="tel" name="tel" value="33344-45555" pattern="(0-9)(3)-(0-9)(3)-(0-9)" />">
-        <br><br>
-        <label for="address"></label>
-        <legend><Address>
-            Enter your address
-        </Address></legend>
-        <input type="text">
+         </legend>
+         <label for="img1">Add your image here</label>
+         <input type="file" id="myFile" name="filename" required>
+            <br><br>
+         <label for="Firstname1">First Name</label>
+         <input type="text" placeholder="First name" required>
+         <br><br>
+         <label for="lastname1">last Name</label>
+         <input type="text" placeholder="last Name" required>
+         <br><br>
+         <label for="email1">E-mail</label>
+         <input type="email" placeholder="e-mail address" required>
+         <br><br>
+         <label for="tel">Phone Number:</label>
+         <input type="tel" name="tel" placeholder="+91 XXXXX-XXXXX" required>
+         <br><br> 
 
-        <label for=""></label>
-        <input type="text">
-
-        <label for=""></label>
-        <input type="text">
+         <div id="address">
+            <label for="address"></label>
+            <legend><Address>Enter your address </Address></legend>
+            <textarea id="address1" name="address1" rows="5" cols="33" placeholder="State,city zip-code....." required></textarea><br><br>
+            <label for="bio1"><legend>tell us about yourself (optional)</legend></label>
+            <textarea id="bio1" name="bio1" rows="5" cols="33" placeholder="bio....."></textarea>
+            <br></br>
+            <label for="portfolio">portfolio (optional)</label>
+            <input type="text" id="portfolio">
+            <br><br>
+            <label for="label">label (optional)</label>
+            <input type="text" id="label">
+            <br><br>
+            <label for="referral">referral (optional)</label>
+            <input type="text" id="referral">
+            <br><br>
+            </fieldset>
+         </div>
+        </div>
+        <button>Next page</button>
     </div>
+    <script src="logic.js"></script>
 </body>
 </html>
