--- a/registerpage1.html
+++ b/registerpage1.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page1</title>
     <link rel="stylesheet" href="stylepage.css">
+    <link rel="animation" href="animation ring.html">
 </head>
-<body>
+<!-- <body> 
     <div id="basic">
          <h1>Build your Resume</h1>
          <div id="basicinfo">
@@ -51,5 +52,6 @@
         </div>
     </div>
  <script src="logic.js"></script>
-</body>
+ </body> -->
+ 
 </html>
