--- a/registerpage1.html
+++ b/registerpage1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylepage.css">
     <link rel="animation" href="animation ring.html">
 </head>
-<!-- <body> 
+<body> 
     <div id="basic">
          <h1>Build your Resume</h1>
          <div id="basicinfo">
@@ -52,6 +52,6 @@
         </div>
     </div>
  <script src="logic.js"></script>
- </body> -->
- 
+ </body> 
+  
 </html>
