--- a/login part/login.html
+++ b/login part/login.html
@@ -27,7 +27,7 @@ path {
     /* border: 8px solid #fff; */
     /* stroke: #fff; */
     /* box-shadow: -5px -5px 5px #888;  */
-    filter: drop-shadow( 4px 3px 3px rgba(255, 255, 255, .7));
+    filter: drop-shadow( 4px 3px 3px rgba(120, 115, 115, 0.7));
 
 }
 
