--- a/loading page/loading page.html
+++ b/loading page/loading page.html
@@ -42,17 +42,17 @@
             <h2>What can you build with Render?</h2>
             <div class="feature-grid">
                 <div class="feature">
-                    <img src="images\depositphotos_52467319-stock-photo-business-people-working-in-office.jpg" alt="Icon 1">
+                    <img src="depositphotos_52467319-stock-photo-business-people-working-in-office.jpg" alt="Icon 1">
                     <h3>Web Apps</h3>
                     <p>Deploy web apps in seconds with Render's automated pipeline.</p>
                 </div>
                 <div class="feature">
-                    <img src="" alt="Icon 2">
+                    <img src="download.jpeg" alt="Icon 2">
                     <h3>APIs</h3>
                     <p>Build and deploy APIs with ease using Render's API gateway.</p>
                 </div>
                 <div class="feature">
-                    <img src="static/icon-3.svg" alt="Icon 3">
+                    <img src="Should-You-Return-To-Office-Work-Pros-And-Cons.webp" alt="Icon 3">
                     <h3>Static Sites</h3>
                     <p>Host static sites with Render's fast and secure CDN.</p>
                 </div>
