--- a/registration_page.html
+++ b/registration_page.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page1</title>
-    <link rel="animation" href="style.html">
+    <!-- <link rel="animation" href="style.html"> -->
 </head>
-
 <body>
 <style>
 .blob {
