--- a/resume/resume builder.html
+++ b/resume/resume builder.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>page1</title>
-    <link rel="stylesheet" href="resume builder.css">
+    <!-- <link rel="stylesheet" href="resume builder.css"> -->
 </head>
 
 <body>
+    <!-- <center> -->
     <div id="basic">
         <h1>Build your Resume</h1>
         <div id="basicinfo">
@@ -88,6 +89,7 @@
                 </form>
         </div>
     </div>
+   <!-- </center> -->
     <button>SUBMIT</button>
     <script src="logic.js"></script>
 </body>
