--- a/login part/style.html
+++ b/login part/style.html
@@ -8,14 +8,14 @@
 <body>
 <style>
 body {
-    background: #7c3aed;
+    background: #0b0b0b;
 
 }
 .blob {
 position: absolute;
 top: 0;
 left: 0;
-fill: #d946ef;
+fill: #46b9ef;
 width: 25vmax;
 z-index: -1;
 animation: move 10s ease-in-out infinite;
@@ -23,10 +23,10 @@ transform-origin: 50% 50%;
 }
 
 path {
-/* border: 8px solid #fff; */
-/* stroke: #fff; */
-/* box-shadow: -5px -5px 5px #888;  */
-filter: drop-shadow( 4px 3px 3px rgba(120, 115, 115, 0.7));
+ border: 8px solid #fff; 
+ stroke: #fff; 
+ box-shadow: -5px -5px 5px #762222; 
+filter: drop-shadow( 4px 3px 3px rgba(255, 255, 255, 0.7));
 
 }
 
@@ -45,6 +45,7 @@ filter: drop-shadow( 4px 3px 3px rgba(120, 115, 115, 0.7));
 <path d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z"/>
 </svg>
 </div>
+<center>
 <div class="bg-white p-8 rounded-lg shadow-md">
 <h2 class="text-2xl font-bold mb-6 text-center">Welcome to Career Hub</h2>
 <form class="space-y-4">
@@ -63,9 +64,12 @@ filter: drop-shadow( 4px 3px 3px rgba(120, 115, 115, 0.7));
         </div>
         <a href="#" class="text-sm font-medium text-indigo-600 hover:underline">Forgot password?</a>
     </div>
-    <button type="submit" class="w-full bg-indigo-600 border border-transparent rounded-md py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Login</button>
+    <button class="btn-shine">
+        <span>LogIn</span>
+    </button>
 </form>
 <p class="text-center mt-4 text-sm font-medium text-gray-500">Don't have an account? <a href="#" class="text-indigo-600 hover:underline">Sign up</a></p>
 </div>
+
 </body>
 </html>
