--- a/resume/resume builder.html
+++ b/resume/resume builder.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <center> -->
+     <center>
     <div id="basic">
         <h1>Build your Resume</h1>
         <div id="basicinfo">
@@ -89,7 +89,6 @@
                 </form>
         </div>
     </div>
-   <!-- </center> -->
     <button>SUBMIT</button>
     <script src="logic.js"></script>
 </body>
