--- a/login part/login.html
+++ b/login part/login.html
@@ -9,7 +9,7 @@
 <body class="bg-violet-600 flex items-center justify-center h-screen">
     <style>
         body {
-            background: #FAD4D8;
+            background: #69ceb5;
 
         }
 
@@ -17,7 +17,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  fill: #222E50;
+  fill: #252ca4;
   width: 25vmax;
   z-index: -1;
   animation: move 10s ease-in-out infinite;
@@ -28,7 +28,7 @@ path {
     /* border: 8px solid #fff; */
     /* stroke: #fff; */
     /* box-shadow: -5px -5px 5px #888;  */
-    filter: drop-shadow( 4px 3px 3px rgba(120, 115, 115, 0.7));
+    filter: drop-shadow( 4px 3px 3px rgba(16, 40, 137, 0.7));
 
 }
 
@@ -51,7 +51,7 @@ button {
   align-items: center;
   cursor: pointer;
   text-transform: uppercase;
-  background-color: #b2b2b7;
+  background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   color: #414146;
@@ -63,7 +63,7 @@ button {
 }
 
 button span {
-  color: #303338;
+  color: #69ceb5;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.7px;
@@ -133,7 +133,7 @@ button:hover span {
 }
 
 .btn-shine:after {
-  background: #dd601d;
+  background: #69ceb5;
   content: "";
   height: 155px;
   left: -75px;
@@ -151,9 +151,9 @@ button:hover span {
   transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
 }
 .signup_button {
-  --primary-color: #9b9ba9;
-  --secondary-color: #fff;
-  --hover-color: #111;
+  --primary-color: #bebed2;
+  --secondary-color: #191818;
+  --hover-color: #0d7d81;
   --arrow-width: 10px;
   --arrow-stroke: 2px;
   box-sizing: border-box;
@@ -217,7 +217,7 @@ button:hover .arrow:before {
         <path d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z"/>
         </svg>
       </div>
-    <div class="bg-white p-8 rounded-lg shadow-md">
+    <div style="backdrop-filter: blur(10px);" class="background-color-#DDC4DD p-8 rounded-lg shadow-md">
         <h2 class="text-2xl font-bold mb-6 text-center">Welcome to Career Hub</h2>
         <form class="space-y-4">
             <div>
