--- a/login part/login.html
+++ b/login part/login.html
@@ -9,7 +9,7 @@
 <body class="bg-violet-600 flex items-center justify-center h-screen">
     <style>
         body {
-            background: #69ceb5;
+            background: #a992a6;
 
         }
 
@@ -17,7 +17,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  fill: #252ca4;
+  fill: #b7a4d8;
   width: 25vmax;
   z-index: -1;
   animation: move 10s ease-in-out infinite;
